# aws-cdk-rust-test

./: .gitignore  Cargo.toml  README.md  cdk.json  package-lock.json  package.json
.github/workflows/: rust.yml
lambda-rust/: Cargo.toml
lambda-rust/src/: main.rs
lib/: aws-cdk-rust-test-stack.ts
test/: aws-cdk-rust-test.test.ts
