[package]
name = "lambda-rust"
version = "0.1.0"
authors = ["Jake Scott <jake.net@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
tokio = "0.1.22"
log = "0.4.8"
lambda_runtime = "0.2.1"
lambda_runtime_core = "0.1.2"
failure = "0.1.6"
simple_logger = "^1"
simple-error = "^0.1"

[dev-dependencies]
